# hrv-sstv-badge

./: .claude_context.md  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: AudioConceptsExplained.md  README.md  assembly-notes.md  bom-raw.md  bom.md  electrical-design.md  firmware-architecture.md  project-status.md  schematic.md  u1-pinout.md
docs/engineers-notebook/: README.md  audio-concepts-explained.md  carrier-rewiring-checklist.md  electrical-design-decisions.md  gpio-optimization.md  gpio-rewiring-checklist.md  harmonic-filter-design.md  rda1846-vs-sa818-analysis.md
firmware/: README.md
hardware/: README.md  SA818-U_Carrier.kicad_sch  SA818-V_Carrier.kicad_sch  _autosave-defcon-sstv-badge.kicad_sch  _autosave-power.kicad_sch  audio.kicad_sch  camera-display.kicad_sch  connectors.kicad_sch  defcon-sstv-badge-bom.csv  defcon-sstv-badge.kicad_prl  defcon-sstv-badge.kicad_pro  defcon-sstv-badge.kicad_sch  mcu.kicad_sch  pcb-design.md  power.kicad_sch  routing-guide.md  switches.kicad_sch  sym-lib-table  ~defcon-sstv-badge.kicad_sch.lck
hardware/footprints.pretty/: QFN50P400X400X100-21N.kicad_mod  SOT65P210X110-6N.kicad_mod  VHF_UHF_Module_generic.kicad_mod  WS2812B.kicad_mod
hardware/main_badge/: camera-display.kicad_sch  connectors.kicad_sch  defcon-sstv-badge-clean.kicad_pcb  defcon-sstv-badge-clean.kicad_prl  defcon-sstv-badge-clean.kicad_pro  defcon-sstv-badge.backup.kicad_pcb  defcon-sstv-badge.backup.kicad_prl  defcon-sstv-badge.backup.kicad_pro  defcon-sstv-badge.kicad_pcb  fp-lib-table  (+8 more)
mechanical/: README.md
src/: main.c
(+21 files in other folders)
